Split advance() to account for two different pos
Positions start with 1 now (line and column).